--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  datetime_picker_formfield_new: ^2.1.0
   dio: ^5.2.1+1
   flutter:
     sdk: flutter
+  intl: ^0.18.1
   shared_preferences: ^2.1.2
 
 dev_dependencies:
